--- a/src/styles/website/website.scss
+++ b/src/styles/website/website.scss
@@ -3,7 +3,11 @@
 @import "./elements/btn";
 @import "./elements/preloader";
 @import "./elements/table";
+@import "./elements/banner";
+@import "./elements/information-table";
 
 @import "./components/main-header";
+@import "./components/attraction";
 
 @import "./modules/spacing";
+@import "./modules/grid";
