--- a/src/styles/base/config/_fonts.scss
+++ b/src/styles/base/config/_fonts.scss
@@ -5,11 +5,12 @@ $font-input: $font-default;
 $font-button: $font-default;
 $font-heading: $font-default;
 
+$font-size-subtitle: 0.875rem;
 $font-size-text: 1rem;
 $font-size-input: 1rem;
 $font-size-button: 1rem; 
-$font-size-heading-1: 1.90rem;
-$font-size-heading-2: 1.75rem;
+$font-size-heading-1: 3rem;
+$font-size-heading-2: 2rem;
 $font-size-heading-3: 1.60rem;
 $font-size-heading-4: 1.45rem;
 $font-size-heading-5: 1.30rem;
