Added search functionality + component tests

--- a/src/styles/website/website.scss
+++ b/src/styles/website/website.scss
@@ -8,6 +8,7 @@
 
 @import "./components/main-header";
 @import "./components/attraction";
+@import "./components/search-bar";
 
 @import "./modules/spacing";
 @import "./modules/grid";
